tests/baselines/reference/infinitelyExpandingTypes4.errors.txt
tests/cases/compiler/infinitelyExpandingTypes4.ts(21,1): error TS2321: Excessive stack depth comparing types 'QueryEnumerator<number>' and 'Query<number>'.
tests/cases/compiler/infinitelyExpandingTypes4.ts(21,1): error TS2321: Excessive stack depth comparing types 'QueryEnumerator<number>' and 'Query<number>'.


==== tests/cases/compiler/infinitelyExpandingTypes4.ts (2 errors) ====
    interface Query<T> {
        // ...
        groupBy<K>(keySelector: (item: T) => K): Query<Grouping<K, T>>;
        // ...
    }
    
    interface QueryEnumerator<T> {
        // ...
        groupBy<K>(keySelector: (item: T) => K): QueryEnumerator<Grouping<K, T>>;
        // ...
    }
    
    interface Grouping<K, T> extends Query<T> {
        key(): K;
    }
    
    var q1: Query<number>;
    var q2: QueryEnumerator<number>;
    var q3: Query<number>;
    
    q1 = q2; // should error
    ~~
!!! error TS2321: Excessive stack depth comparing types 'QueryEnumerator<number>' and 'Query<number>'.
    ~~~~~~~
!!! error TS2321: Excessive stack depth comparing types 'QueryEnumerator<number>' and 'Query<number>'.
    q1 = q3; // should not error
    